new way to add participants

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -47,6 +47,14 @@ h1{
 	color: #FF6347;
 }
 
+.add{
+	background-image:url("../img/check.jpg");
+}
+
+.delete{
+	background-image:url("../img/cross.jpg");
+}
+
 /**********************************************************
 					All tables !!! 
 **********************************************************/
