Addition of connection page in progress. (+indic.)

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -72,6 +72,48 @@ table th{
 }
 
 /**********************************************************
+					Home Console 
+**********************************************************/
+
+#tabs
+{
+    font : bold 11px Batang, arial, serif;
+    list-style-type : none;
+    padding-bottom : 24px;
+    border-bottom : 1px solid #9EA0A1;
+    margin-left : 0;
+}
+
+#tabs li
+{
+    float : left;
+    height : 21px; 
+    background-color: #F4F9FD;
+    margin : 2px 2px 0 2px !important;  /* Pour les navigateurs autre que IE */
+    margin : 1px 2px 0 2px;  /* Pour IE  */
+    border : 1px solid #9EA0A1;
+}
+
+#tabs li.active
+{
+    border-bottom: 1px solid #fff;
+    background-color: #fff;
+}
+
+#tabs a
+{
+    display : block;
+    color : #666;
+    text-decoration : none;
+    padding : 4px;
+}
+
+#tabs a:hover
+{
+    background : #fff;
+}
+
+/**********************************************************
 					List of channels 
 **********************************************************/
 
