--- a/public/css/master.css
+++ b/public/css/master.css
@@ -2,16 +2,17 @@
 						BODY 
 **********************************************************/
 html, body{
-	background-color: silver;
+	background-color: lavender;
 }
 
 header{
-	border-top: 3px solid grey;
-	border-bottom: 3px solid grey;
+	border-top: 3px solid black;
+	border-bottom: 3px solid black;
 }
 
 h1{
 	text-align: center;
+	color : black;
 }
 
 #status{
@@ -24,6 +25,16 @@ h1{
 
 .underline{
 	text-decoration: underline;
+}
+
+.fright{
+	position: relative;
+	float: right;
+}
+
+.fleft{
+	position: relative;
+	float: left;
 }
 
 .alert{
@@ -70,6 +81,49 @@ table th, table td{
 table th{
 	width: 200px;
 }
+/**********************************************************
+					Connection page 
+**********************************************************/
+#connectionForm {
+	margin: auto;
+	margin-top: 10%;
+	width: 500px;
+	padding: 10px 20px;
+	background: lavender;
+	color: midnightblue;
+}
+#connectionForm p {
+	margin: 1em 0;
+}
+#connectionForm p.double {
+	/* Empêcher le dépassement des flottants */
+	overflow: hidden;
+	/* Idem pour IE6 */
+	width: 100%;
+}
+#connectionForm p.double label {
+	float: left;
+	width: 150px;
+	text-align: right;
+	font-weight: bold;
+}
+#connectionForm p.double label span.info {
+	display: block;
+	margin-top: .2em;
+	font-size: .8em;
+	font-weight: normal;
+	cursor: default;
+}
+#connectionForm p.double input[type=text]{
+	width: 250px;
+	margin-left: 12px;
+	border: solid 1px midnightblue;
+	padding: 2px 4px;
+}
+#connectionForm p.simple {
+	margin-left: 160px;
+}
+
 
 /**********************************************************
 					Home Console 
@@ -77,40 +131,42 @@ table th{
 
 #tabs
 {
-    font : bold 11px Batang, arial, serif;
     list-style-type : none;
     padding-bottom : 24px;
-    border-bottom : 1px solid #9EA0A1;
-    margin-left : 0;
+    border-bottom : 1px solid #696969;
 }
 
 #tabs li
 {
     float : left;
     height : 21px; 
-    background-color: #F4F9FD;
+    background-color: none;
     margin : 2px 2px 0 2px !important;  /* Pour les navigateurs autre que IE */
     margin : 1px 2px 0 2px;  /* Pour IE  */
-    border : 1px solid #9EA0A1;
+    border : 1px solid #696969;
 }
 
 #tabs li.active
 {
-    border-bottom: 1px solid #fff;
-    background-color: #fff;
+	padding-left: 10px;
+	padding-right: 10px;
+    border-bottom: 1px solid #696969;
+    background-color: #696969;
 }
 
-#tabs a
+#tabs li
 {
     display : block;
-    color : #666;
+    color : black;
     text-decoration : none;
-    padding : 4px;
+    padding-left: 10px;
+	padding-right: 10px;
 }
 
-#tabs a:hover
+#tabs li:hover
 {
-    background : #fff;
+    background : #696969;
+    cursor: pointer;
 }
 
 /**********************************************************
