HUB-437 - Update the logo and the connection indicator

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -30,9 +30,8 @@ html, body {
 }
 
 .brand img {
-  width: 22px;
-  height: 22px;
   margin-top: -6px;
+  margin-bottom: -4px;
   margin-right: 10px;
 }
 
